--- a/ftp-upload.yml
+++ b/ftp-upload.yml
@@ -10,10 +10,19 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+# FTP upload
+# Upload files using FTP
+- task: FtpUpload@2
+  inputs:
+    #credentialsOption: 'serviceEndpoint' # Options: serviceEndpoint, inputs
+    #serverEndpoint: # Required when credentialsOption == ServiceEndpoint
+    #serverUrl: # Required when credentialsOption == Inputs
+    #username: # Required when credentialsOption == Inputs
+    #password: # Required when credentialsOption == Inputs
+    rootDirectory: 
+    #filePatterns: '**' 
+    #remoteDirectory: '/upload/$(Build.BuildId)/' 
+    #clean: false 
+    #cleanContents: false # Required when clean == False
+    #preservePaths: false 
+    #trustSSL: false 
